--- a/components/Footer/index.module.scss
+++ b/components/Footer/index.module.scss
@@ -31,8 +31,10 @@
 
     .main {
       gap: 24px;
-      padding: 40px;
+      padding: 40px 0;
       display: flex;
+      flex-grow: 1;
+      justify-content: space-between;
 
       .category {
         gap: 16px;
@@ -77,14 +79,25 @@
   }
 
   .bottom {
-    padding: 24px;
+    padding: 24px 0;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin-left: 250px;
+    margin-right: 250px;
 
-    .copyRight {
-      font-size: 16px;
-      color: var(--app-white-2)
+    .links {
+      display: flex;
+      align-items: center;
+      margin-right: 90px;
+      gap: 16px;
+      justify-content: space-between;
+
+      img {
+        flex-shrink: 0;
+        width: 20%;
+        object-fit: contain;
+      }
     }
 
     .footerSocials {
@@ -115,6 +128,11 @@
           height: 80px;
         }
       }
+    }
+
+    .bottom {
+      margin-left: 100px;
+      margin-right: 100px;
     }
   }
 }
@@ -166,6 +184,12 @@
         }
       }
     }
+
+    .bottom {
+      margin-left: 0;
+      margin-right: 0;
+      padding: 48px;
+    }
   }
 }
 
@@ -213,11 +237,19 @@
     }
 
     .bottom {
+      padding: 24px;
       flex-direction: column;
       align-items: flex-start;
 
-      .copyRight {
-        margin-bottom: 8px;
+      .links {
+        margin-bottom: 32px;
+        align-items: flex-start;
+        flex-direction: column;
+
+        img {
+          width: auto;
+          height: auto;
+        }
       }
     }
   }
