--- a/styles/Building.module.scss
+++ b/styles/Building.module.scss
@@ -2,13 +2,14 @@
   background: #04050a;
   height: 100vh;
   min-height: 768px;
+  overflow: auto;
 }
 
 .wrapper {
   width: 100%;
   height: 100%;
+  overflow: hidden;
   padding: 250px 40px;
-  border-top: 66px solid var(--app-white-2);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -19,13 +20,13 @@
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#04050a', endColorstr='#48577D', GradientType=0);
 }
 
-
 .title {
   font-size: 16px;
   letter-spacing: 8px;
   font-weight: 700;
   color: var(--app-white-2);
   margin-bottom: 48px;
+  text-align: center;
 }
 
 .description {
@@ -33,6 +34,7 @@
   font-weight: 300;
   color: var(--app-white-2);
   margin-bottom: 48px;
+  text-align: center;
 }
 
 .illustration {
@@ -415,5 +417,39 @@
   }
   to {
     height: 3px;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .description {
+    font-size: 40px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .wrapper {
+    padding: 250px 24px;
+  }
+
+  .title {
+    font-size: 10px;
+    letter-spacing: 1px;
+    margin-bottom: 8px;
+  }
+
+  .description {
+    font-size: 28px;
+    margin-bottom: 24px;
+  }
+}
+
+
+@media screen and (max-width: 425px) {
+  .title{
+
+  }
+
+  .description {
+    font-size: 32px;
   }
 }
