--- a/components/Authors/index.module.scss
+++ b/components/Authors/index.module.scss
@@ -119,6 +119,10 @@
     line-height: 40px;
     text-align: center;
     color: var(--app-white-2);
+
+    .quote{
+      margin-bottom: 38px;
+    }
   }
 }
 
