--- a/components/Footer/index.module.scss
+++ b/components/Footer/index.module.scss
@@ -159,7 +159,7 @@
 }
 
 @media screen and (min-width: 1200px) {
-  .right{
+  .right {
 
   }
 }
@@ -256,17 +256,7 @@
       padding: 24px;
       justify-content: flex-start;
 
-      .left {
-        width: auto;
-        height: 40px;
-        margin-right: 8px;
-
-        img {
-          width: 100%;
-          height: 100%;
-        }
-      }
-
+      .left,
       .right {
         display: none;
       }
